Full setup to link Gutenberg entries with GND authors in lobid.org
- Read full Gutenberg catalogue from remote ZIP file
- Get all lobid.org authors from a grepped dump
- Link Gutenberg entries to GND authors found in lobid.org
- Upload new triples to the lobid.org 4store instance

The `FourStore` class wraps SPARQL-based R/W access to 4store.